cleanup profile repository
